tests/baselines/reference/dynamicImportDefer.errors.txt
error TS2468: Cannot find global value 'Promise'.
b.ts(1,1): error TS2712: A dynamic import call in ES5 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your '--lib' option.
b.ts(1,14): error TS2792: Cannot find module './a'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


!!! error TS2468: Cannot find global value 'Promise'.
==== a.ts (0 errors) ====
    export function foo() {
      console.log("foo from a");
    }
    
==== b.ts (2 errors) ====
    import.defer("./a").then(ns => {
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2712: A dynamic import call in ES5 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your '--lib' option.
                 ~~~~~
!!! error TS2792: Cannot find module './a'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
      ns.foo();
    });
    